src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/MissingResourceType1/InvalidMissingResourceType1.php
<?php

namespace Invalid\MissingResourceType1;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidMissingResourceType1 extends PluginBundle
{
}